[package]
name = "time_analyzer"
version = "0.1.0"
authors = ["naymoll"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.61"
clap = "2.33.3"
rand = "0.8.3"